--- a/Spring CLOUD/ProductService/src/main/resources/application.properties
+++ b/Spring CLOUD/ProductService/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 server.port=9090
 
+spring.application.name=product-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
