--- a/Spring CLOUD/couponservice/src/main/resources/application.properties
+++ b/Spring CLOUD/couponservice/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.application.name=coupon-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+server.port=8081
